Terraform/NGINX/AWS/k8s_ubuntu/manifests/dvwa/ingress-dvwa.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dvwa
  namespace: dvwa
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dvwa
                port:
                  number: 80
